upgrade vault version to 1.15.0